k8-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hapi-async-await-example
spec:
  selector:
    app: hapi-async-await-example
  type: LoadBalancer
  ports:
  - name: main
    port: 80
    targetPort: 80
